Update dependencies and corresponding API calls to latest versions

--- a/app/compare.html
+++ b/app/compare.html
@@ -56,14 +56,15 @@
   (function() {
     var importDoc = document.currentScript.ownerDocument;
 
-    var proto = Object.create(HTMLElement.prototype);
+    class CompareRuns extends HTMLElement {
+      constructor() {
+        super();
+        var template = importDoc.querySelector('#compare-template');
+        var clone = document.importNode(template.content, true);
+        this.appendChild(clone);
+      }
+    }
 
-    proto.createdCallback = function() {
-      var template = importDoc.querySelector('#compare-template');
-      var clone = document.importNode(template.content, true);
-      this.appendChild(clone);
-    };
-
-    document.registerElement('compare-runs', {prototype: proto});
+    customElements.define('compare-runs', CompareRuns);
   })();
 </script>
